--- a/src/component/checkout.css
+++ b/src/component/checkout.css
@@ -1,6 +1,11 @@
 .checkout__image{
-    width: 100vw;
+    width: 100%;
     height: 80px;
-    object-fit: cover;
+    /* object-fit: cover; */
+    object-fit: contain;
     margin: 2px 0;
+    left: 0;
+}
+.checkout{
+    /* display:flex; */
 }
